--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <title>Elendil String Quartet</title>
     
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+  </head>
+
+  <navbar>
+  </navbar>
+  
+  <body>
+    <div id='landing' class='cont parallax-container'>
+      <img id='logo' src="/logo.jpg" alt="logo" />
+      <div id='desc'>
+        <p>Nuestro repertorio incluye las mas célebres bandas sonoras de:</p>
+        <ul>
+          <li>Películas.</li>
+          <li>Series.</li>
+          <li>Video Juegos.</li>
+        </ul>
+      </div>
+    </div>
+    <div id='pics' class='cont'>Testing</div>
+    <div id='vid' class='cont parallax-container'>This</div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+    <script src="js/index.js"></script>
+  </body>  
+
+</html>
