--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+    <link rel="icon" href="./assets/logo.jpg">
     <title>Elendil String Quartet</title>
     
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -16,17 +17,24 @@
   </navbar>
   
   <body>
-    <div id='landing' class='cont parallax-container'>
-      <img id='logo' src="/logo.jpg" alt="logo" />
-      <div id='desc'>
-        <p>Nuestro repertorio incluye las mas célebres bandas sonoras de:</p>
-        <ul>
-          <li>Películas.</li>
-          <li>Series.</li>
-          <li>Video Juegos.</li>
-        </ul>
-      </div>
+    <div id='landing' class='parallax-container valign-wrapper'>
+        <div class='row'>
+            <div class='col s8 offset-s2'>
+                <div class='card red darken-3 z-depth-3'>
+                    <div class='card-image z-depth-1'>
+                        <img src="./assets/logo.jpg" alt="logo" />
+                    </div>
+                    <div class='card-content'>
+                        <p>Nuestro repertorio incluye las mas célebres bandas sonoras de:</p>
+                        <p>Películas, Series y Video Juegos.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
     <div id='pics' class='cont'>Testing</div>
     <div id='vid' class='cont parallax-container'>This</div>
 
