--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
   </head>
 
-  <navbar>
-  </navbar>
+  <nav id='navbar'>
+      <div class='nav-wrapper'>
+          <ul class="right hide-on-med-and-down">
+              <li>Inicio</li>
+              <li>Nosotros</li>
+              <li>Video</li>
+              <li>Proximas Fechas</li>
+              <li>Contacto</li>
+          </ul>
+      </div>
+  </nav>
+  
   
   <body>
     <div id='landing' class='parallax-container valign-wrapper'>
@@ -24,9 +34,9 @@
                     <div class='card-image z-depth-1'>
                         <img src="./assets/logo.jpg" alt="logo" />
                     </div>
-                    <div class='card-content'>
+                    <div class='card-content white-text'>
                         <p>Nuestro repertorio incluye las mas célebres bandas sonoras de:</p>
-                        <p>Películas, Series y Video Juegos.</p>
+                        <p><strong>Películas, Series y Video Juegos.</strong></p>
                     </div>
                 </div>
             </div>
