--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </head>
 
   <nav id='navbar'>
-      <div class='nav-wrapper'>
+      <div class='nav-wrapper green darken-3'>
           <ul class="right hide-on-med-and-down">
-              <li>Inicio</li>
-              <li>Nosotros</li>
-              <li>Video</li>
-              <li>Proximas Fechas</li>
-              <li>Contacto</li>
+              <li><a href="#landing">Inicio</a></li>
+              <li><a href="#pics">Nosotros</a></li>
+              <li><a href="">Video</a></li>
+              <li><a href="">Proximas Fechas</a></li>
+              <li><a href="">Contacto</a></li>
           </ul>
       </div>
   </nav>
@@ -30,11 +30,11 @@
     <div id='landing' class='parallax-container valign-wrapper'>
         <div class='row'>
             <div class='col s8 offset-s2'>
-                <div class='card red darken-3 z-depth-3'>
+                <div class='card'>
                     <div class='card-image z-depth-1'>
                         <img src="./assets/logo.jpg" alt="logo" />
                     </div>
-                    <div class='card-content white-text'>
+                    <div class='card-content white-text green darken-3'>
                         <p>Nuestro repertorio incluye las mas célebres bandas sonoras de:</p>
                         <p><strong>Películas, Series y Video Juegos.</strong></p>
                     </div>
