--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="icon" href="./assets/logo.jpg">
-    <title>Elendil String Quartet</title>
+    <title>Cuarteto Elendil</title>
     
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
@@ -43,7 +43,7 @@
 
 
     <div id='intro'>
-        <div class='card'>
+        <div class='card' id='logo-card'>
             <div class='card-image z-depth-1'>
                 <img src="./assets/logo.jpg" alt="logo" />
             </div>
@@ -55,7 +55,11 @@
     </div>
 
 
-    <div id='vid' class='parallax-container'>This</div>
+    <div id='vid' class='parallax-container'>
+        <div class='video-container' id='vid-container'>  
+            <iframe id='video' width="560" height="315" src="https://www.youtube.com/embed/oNeDcO0wNFc" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
 
     <div id='news'></div>
 
