--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href='#' data-activates='mobile' class='button-collapse'><i class='material-icons'>menu</i></a>
                 <ul class='right hide-on-med-and-down'>
                     <li><a href='#landing'>Inicio</a></li>
-                    <li><a href='#vid'>Video</a></li>
+                    <li><a href='#intro'>Video</a></li>
                     <li><a href='#news'>Novedades</a></li>
                     <li><a href='#contact'>Contacto</a></li>
                 </ul>
@@ -31,7 +31,7 @@
     <ul class="side-nav" id="mobile">
         <li><img src="./assets/logo.jpg" id='side-nav-logo' alt=""></li>
         <li><a href='#landing'>Inicio</a></li>
-        <li><a href='#vid'>Video</a></li>
+        <li><a href='#intro'>Video</a></li>
         <li><a href='#news'>Novedades</a></li>
         <li><a href='#contact'>Contacto</a></li>
     </ul>
@@ -43,7 +43,7 @@
 
 
     <div id='intro'>
-        <div class='row'>
+        <div class='row' id='video-row'>
             <div class='col s6'>
                 <div class='card' id='logo-card'>
                     <div class='card-image z-depth-1'>
