--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
         </div>
     </div>
 
-    <div id='news'></div>
+    <div id='news' class='parallax-container'>
+        Sitio en construccion
+    </div>
 
-    <div id='contact' class='parallax-container'></div>
+    <div id='contact'>
+        Sitio en construccion
+    </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
