--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./assets/logo.jpg">
     <title>Cuarteto Elendil</title>
     
+    <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -45,7 +46,7 @@
     <div id='intro'>
         <div class='row' id='video-row'>
             <div class='col s6'>
-                <div class='card' id='logo-card'>
+                <div class='card hoverable' id='logo-card'>
                     <div class='card-image z-depth-1'>
                         <img src="./assets/logo.jpg" alt="logo" />
                     </div>
@@ -57,7 +58,7 @@
             </div>
 
             <div class='col s6'>
-                <div class='video-container' id='vid-container'>  
+                <div class='video-container hoverable' id='vid-container'>  
                     <iframe id='video' width="560" height="315" src="https://www.youtube.com/embed/oNeDcO0wNFc" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>    
@@ -65,7 +66,9 @@
     </div>
 
     <div id='news' class='parallax-container'>
-        Sitio en construccion
+        <div id='news-card' class='card hoverable z-depth-2'>
+            <h1>Muy pronto nuevas fechas!</h1>
+        </div>
     </div>
 
     <div id='contact'>
