--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
     </div>
 
     <div id='contact'>
-        Sitio en construccion
+        <div class='row'>
+            <div class='col s6'>
+                <div id='fb-card' class='card hoverable'>
+                    <div class='card-image z-depth-1'>
+                        <a target='_blank' href="https://www.facebook.com/cuartetoelendil/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" alt=""></a>
+                    </div>
+            </div>
+
+            <div class='col s6'>
+                <form action=""></form>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
