--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
 
 
-    <div id='intro'>
-        <div class='row' id='video-row'>
+        <div class='row' id='intro'>
             <div class='col s6'>
                 <div class='card hoverable' id='logo-card'>
                     <div class='card-image z-depth-1'>
@@ -63,11 +62,11 @@
                 </div>
             </div>    
         </div>
-    </div>
 
     <div id='news' class='parallax-container'>
         <div id='news-card' class='card hoverable z-depth-2'>
-            <h1>Muy pronto nuevas fechas!</h1>
+            <h3>Domingo 27 de Julio</h3>
+            <span>Magic Meeting 2017, repertorio en vivo de Harry Potter</span>
         </div>
     </div>
 
