--- a/index.html
+++ b/index.html
@@ -67,17 +67,14 @@
         </div>
     </div>
 
-    <div id='contact'>
-        <div class='row'>
-            <div class='col s6'>
-                <div id='fb-card' class='card hoverable'>
-                    <div class='card-image z-depth-1'>
-                        <a target='_blank' href="https://www.facebook.com/cuartetoelendil/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" alt=""></a>
-                    </div>
-            </div>
-
-            <div class='col s6'>
-                <form action=""></form>
+    <div id='contact' class='row'>
+        <div class='col s12'>
+            <div id='contact-text-card' class='card hoverable'>
+                <div class='card-image z-depth-1'>
+                    <a id='fb-link' target='_blank' href="https://www.facebook.com/cuartetoelendil/"><img id='fb-img' src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" alt=""></a>
+                    <p>Contrataciones: cuartetoelendil@gmail.com</p>
+                    <p>O via Inbox.</p>
+                </div>
             </div>
         </div>
     </div>
