mobile version done 1.0

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class='row' id='intro'>
-        <div class='col s6'>
+        <div class='col m6'>
             <div class='card hoverable' id='logo-card'>
                 <div class='card-image z-depth-1'>
                     <img src="./assets/logo.jpg" alt="logo" />
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <div class='col s6'>
+        <div class='col m6'>
             <div class='video-container hoverable' id='vid-container'>  
                 <iframe id='video' width="560" height="315" src="https://www.youtube.com/embed/oNeDcO0wNFc" frameborder="0" allowfullscreen></iframe>
             </div>
